# EdgeEye

./: .gitignore  CMakeLists.txt  README.md  config.json  project.md
include/: camera.hpp  fps.hpp  screenshot.hpp  video.hpp
src/: camera.cpp  fps.cpp  main.cpp  screenshot.cpp  video.cpp
